--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,180 @@
 /*Author: Hilla Huhtala*/
 /*font-family: 'Fredericka the Great', cursive;
-font-family: 'Waterfall', cursive;*/
+font-family: 'WindSong', cursive;
+font-family: 'Bebas Neue', cursive;*/
+
+html, body {
+    overflow-x: hidden;
+}
 
 body {
-    background-image: url("../images/backround_frontpage.jpg");
+    background-image: url("../images/pattern.jpg");
+    background-size: auto;
+}
+
+.row {
+    margin:0px;
+}
+.content {
+    background-image: url("../images/backround_frontpage3.png");
+    background-size: contain;
+    background-position: right bottom;
+    background-repeat: no-repeat;
+}
+
+@media only screen and (max-width: 1999px) {
+    #header {
+        display: none;
+    }
+
 }
 
 @media only screen and (max-width: 576px) {
     #navigointipalkki_otsikko, #navigointipalkki_alaotsikko{
         display: none;
     }
+
+    .btn {
+        font-size: 15px;
+        font-weight: bold;
+    }
 }
 
-@media only screen and  (min-width: 1200px) {
+@media only screen and  (min-width: 1200px) {   
     #navigointipalkki_otsikko, #navigointipalkki_alaotsikko{
         display: none;
     }
+        
+    #header{
+        display: block;
+        color: white;
+        text-shadow: #ffffff88 1px 1px 8px;
+    }
+
+    #header h1 {
+        font-family: 'Fredericka the Great', cursive;
+        font-size: 80px;
+        margin-bottom: 3px;
+    }
+
+    hr.divider {
+        border-top: 3px solid rgb(255, 255, 255);
+        border-radius: 5px;
+        margin-top: 3px;
+        margin-bottom: 3px;
+        margin-left: 300px;
+        margin-right: 300px;
+    }
+
+    #header p {
+        font-family: 'WindSong', cursive;
+        font-size: 45px;
+        margin-top: 3px;
+    }
+
+    /*SISÄLLÖN TYYLITTELY*/
+    #sisalto {
+        color: white;
+    }
+
+    #sisalto p {
+        margin-top: 30px;
+        margin-left: 50px;
+        font-size: 22px;
+    }
+
+    #sisalto h2 {
+        font-family: 'Bebas Neue', cursive;
+        font-size: 60px;
+        margin: 15px;
+    }
+
+   
+
+}
+
+/*NAVIGOINTIPALKIN TYYLITTELY ALKAA*/
+.navbar {
+    background-color: rgba(255, 255, 255, 0.6);
+}
+
+.navbar-light .navbar-nav .nav-link{
+    font-family: 'Bebas Neue', cursive;
+    text-decoration: none;
+    color: #151e1b;
+    font-size: 30px;
+}
+
+.nav-link:hover {
+    color: #151e1b7e;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+}
+
+
+.nav-link-active {
+    font-family: 'Bebas Neue', cursive;
+    text-decoration: none;
+    color: #151e1b;
+    font-size: 30px;
+}
+
+.nav-link-active:hover {
+    color: #151e1b7e;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+}
+
+.navbar-light .navbar-text{
+    color: #151e1b;
+    margin-bottom:2px;
+    margin-top: 2px;
+    text-shadow: #000000 1px 1px 5px;
+}
+
+.navbar-text h1 {
+    font-family: 'Fredericka the Great', cursive;
+    font-size: 40px;
+}
+
+.navbar-text p {
+    font-family: 'WindSong', cursive;
+    font-size: 25px;
+}
+
+.navbar-brand{
+    padding: 0px;
+}
+
+/*SISÄLLÖN TYYLITTELY*/
+#sisalto {
+    color: white;
+    display: flex;
+}
+
+#sisalto p {
+    margin-top: 30px;
+    margin-left: 50px;
+    font-size: 22px;
+}
+
+#sisalto h2 {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 60px;
+    margin: 15px;
+}
+
+.btn {
+    color: #151e1b;
+    margin: 15px;
+    box-shadow: rgba(255, 255, 255, 0.6) 1px 1px 5px;
+}
+
+.btn:hover {
+    box-shadow: rgba(255, 255, 255, 0.6) 1px 1px 15px;
+}
+
+/*FOOTER*/
+#footer {
+    margin-top: 30px;
+    max-height: 50px;
+    background-color: rgba(255, 255, 255, 0.6);
 }
