--- a/css/historia.css
+++ b/css/historia.css
@@ -175,7 +175,7 @@ body {
 }
 
 /*SISÄLLÖN TYYLITTELY*/
-.container-fluid#content-box {
+.content-div#content-box {
     background-color: rgba(255, 255, 255, 0.6);
     padding:15px;
     margin-bottom: 30px;
@@ -185,7 +185,7 @@ body {
     
 }
 
-.container-fluid img {
+.content-div#content-box img {
     border-radius: 10px;
     margin-top: 20px;
     margin-bottom: 20px;
