--- a/css/ominaisuudet.css
+++ b/css/ominaisuudet.css
@@ -174,18 +174,19 @@ body {
     padding: 0px;
 }
 
-/*SISÄLLÖN TYYLITTELY*/
-.container-fluid#content-box {
+/*SISÄLLÖN TYYLITTELY ALKAA*/
+.sisalto-boksi#content-box {
+    visibility: block;
     background-color: rgba(255, 255, 255, 0.6);
     padding:15px;
     margin-bottom: 30px;
     border-radius: 30px;
     margin-left: 20px;
-    margin-right: 40px;
+    margin-right: 20px;
     
 }
 
-.container-fluid img {
+.sisalto-boksi img {
     border-radius: 10px;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -207,6 +208,10 @@ body {
     margin: 15px;
     color: white;
     text-shadow: black 1px 1px 5px;
+}
+
+h2#otsikko1 {
+    font-size: 40px;
 }
 
 .accordion#ominaisuudet{
