--- a/css/lisatietoa.css
+++ b/css/lisatietoa.css
@@ -175,16 +175,6 @@ body {
 }
 
 /*SISÄLLÖN TYYLITTELY*/
-.sisalto-boksi#content-box {
-    background-color: rgba(255, 255, 255, 0.6);
-    padding:15px;
-    margin-bottom: 30px;
-    border-radius: 30px;
-    margin-left: 20px;
-    margin-right: 40px;
-    
-}
-
 .sisalto-boksi img {
     border-radius: 10px;
     margin-top: 20px;
@@ -192,7 +182,7 @@ body {
 }
 
 #sisalto {
-    color: #184127;
+    color: #ffffff;
     display: flex;
 }
 
